--- a/veranatura/package.json
+++ b/veranatura/package.json
@@ -3,12 +3,11 @@
   "version": "1.0.0",
   "type": "module",
   "scripts": {
-  "dev": "vite",
-  "build": "vite build",
-  "preview": "vite preview",
-  "deploy": "gh-pages -d dist"
-}
-,
+    "dev": "vite",
+    "build": "npx vite build",
+    "preview": "vite preview",
+    "deploy": "gh-pages -d dist"
+  },
   "dependencies": {
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
@@ -27,6 +26,6 @@
     "globals": "^16.3.0",
     "postcss": "^8.4.38",
     "tailwindcss": "^3.3.5",
-    "vite": "^7.0.4"
+    "vite": "^7.1.2"
   }
 }
