--- a/veranatura/package.json
+++ b/veranatura/package.json
@@ -4,9 +4,9 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "npx vite build",
-    "preview": "vite preview",
-    "deploy": "gh-pages -d dist"
+    "build": "vite build",
+    "preview": "vite preview"
+    
   },
   "dependencies": {
     "react": "^19.1.0",
